--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/superagent": "^4.1.7",
     "@types/uuid": "^8.0.0",
     "antd": "^4.3.4",
+    "axios": "^0.24.0",
     "lodash": "^4.17.15",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
