--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "aws-sdk": "2.519.0",
     "source-map-support": "0.5.10",
-    "uuid": "3.3.2"
+    "uuid": "^8.3.2",
+    "v4": "^0.0.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.17",
@@ -32,7 +33,7 @@
     "serverless-webpack": "5.2.0",
     "ts-loader": "5.3.3",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "3.7.2",
+    "typescript": "^3.7.2",
     "webpack": "4.29.0"
   }
 }
