--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.3.4",
     "axios": "^0.24.0",
     "lodash": "^4.17.15",
+    "node-fetch": "^3.0.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
