--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -11,18 +11,18 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs10.x
+  runtime: nodejs12.x
   region: eu-west-1
   stage: dev
   profile: dojo-serverless
-  # iamRoleStatements:
-  #   - Effect: Allow
-  #     Action:
-  #       - dynamodb:Query
-  #       - dynamodb:PutItem
-  #       - dynamodb:DeleteItem
-  #     Resource:
-  #       - 'Fn::GetAtt': [DojoServerlessTable, Arn]
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:PutItem
+        - dynamodb:DeleteItem
+      Resource:
+        - 'Fn::GetAtt': [DojoServerlessTable, Arn]
   usagePlan:
     quota:
       limit: 5000
@@ -50,3 +50,4 @@ functions:
 
 resources:
   - ${file(resources/api-gateway-errors.yml)}
+  - ${file(resources/dynamoDB.yml)}
