--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "eslint-config-prettier": "6.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "prettier": "1.18.2",
-    "serverless": "1.51.0",
+    "serverless": "^2.65.0",
     "serverless-webpack": "5.2.0",
     "ts-loader": "5.3.3",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
