--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -47,6 +47,20 @@ functions:
           method: get
           path: virus
           cors: true
+  createVirus:
+    handler: src/handlers/virus/create.main
+    events:
+      - http:
+          method: put
+          path: virus
+          cors: true
+  killVirus:
+    handler: src/handlers/virus/kill.main
+    events:
+      - http:
+          method: delete
+          path: virus/{id}
+          cors: true
 
 resources:
   - ${file(resources/api-gateway-errors.yml)}
